# sigcount

./: CMakeLists.txt  README.md
source/: exonRefine.cpp  sigcount.cpp  sources.cmake
